--- a/dashboard.html
+++ b/dashboard.html
@@ -290,7 +290,7 @@
 
         .metric-label {
             font-size: 0.9rem;
-            color: var(--muted-text);
+            color: #ffffff;
         }
 
         .criteria-list {
@@ -409,7 +409,7 @@
 
         .badge-warning {
             background-color: var(--warning-color);
-            color: #000;
+            color: #fff;
         }
 
         .badge-danger {
@@ -677,7 +677,7 @@
         }
 
         .title-gradient {
-            background: linear-gradient(90deg, #00cc66, #000000);
+            background: linear-gradient(90deg, #00cc66, #ffffff);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
