--- a/dashboard.html
+++ b/dashboard.html
@@ -10,11 +10,11 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root {
-            --primary-bg: #0f1117;
-            --secondary-bg: #161923;
-            --card-bg: #1c202b;
+            --primary-bg: #1a1f2e;
+            --secondary-bg: #252a38;
+            --card-bg: #2a3145;
             --text-color: #e0e0e0;
-            --muted-text: #c0c0c0;
+            --muted-text: #e0e0e0;
 
             --gt-color: #00ff66;
             --battle-color: #ff3a5e;
@@ -37,7 +37,7 @@
             color: var(--text-color);
             padding: 0;
             margin: 0;
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             line-height: 1.6;
         }
 
@@ -90,7 +90,7 @@
         }
 
         .last-updated-header {
-            font-size: 0.9rem;
+            font-size: 1.0rem;
             color: var(--muted-text);
             font-family: 'Roboto', sans-serif;
             margin: 0 20px;
@@ -159,7 +159,7 @@
         }
 
         .card-body {
-            padding: 30px;
+            padding: 40px;
             transition: all 0.3s ease;
         }
 
@@ -226,7 +226,7 @@
         .strategies-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
+            gap: 30px;
         }
 
         .strategy-card {
