--- a/visualization.html
+++ b/visualization.html
@@ -240,6 +240,10 @@
             border-left: 4px solid var(--h2h-gg-8m-color);
         }
 
+        .league-header.adriatic-10m {
+            border-left: 4px solid var(--adriatic-10m-color);
+        }
+
         .best-player-card {
             background: var(--card-bg);
             border-radius: 8px;
@@ -924,6 +928,7 @@
         <button class="top-nav-button" data-league="Battle Volta 6m" style="color: #FFD700;">Battle Volta 6m</button>
         <button class="top-nav-button" data-league="GT Leagues 12m" style="color: #32CD32;">GT Leagues 12m</button>
         <button class="top-nav-button" data-league="H2H GG 8m" style="color: #8A2BE2;">H2H GG 8m</button>
+        <button class="top-nav-button" data-league="Adriatic 10m" style="color: #1E90FF;">Adriatic 10m</button>
     </div>
 
     <div class="content">
