--- a/statistics.html
+++ b/statistics.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RW TIPS - Estatísticas das Ligas</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --primary-color: #6c5ce7;
             --secondary-color: #a29bfe;
-            --background-dark: #0f0f13;
-            --card-bg: #1a1a23;
-            --card-hover: #22222c;
+            --background-dark: #000000;
+            --card-bg: #000000;
+            --card-hover: #1a1a1a;
             --text-primary: #ffffff;
             --text-secondary: #a0a0a0;
             --accent-color: #00ff88;
@@ -23,8 +23,8 @@
         }
 
         body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, var(--background-dark) 0%, #16161f 100%);
+            font-family: 'Poppins', sans-serif;
+            background: var(--background-dark);
             color: var(--text-primary);
             min-height: 100vh;
             line-height: 1.6;
@@ -144,7 +144,7 @@
         }
 
         .league-stats {
-            background: linear-gradient(145deg, var(--card-bg), var(--card-hover));
+            background: var(--card-bg);
             border-radius: 16px;
             padding: 25px;
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
@@ -152,7 +152,6 @@
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
-            backdrop-filter: blur(10px);
         }
 
         .league-stats:hover {
@@ -163,7 +162,7 @@
         .highlight {
             border: none;
             position: relative;
-            background: linear-gradient(145deg, var(--card-bg), var(--card-hover));
+            background: var(--card-bg);
             border-left: 4px solid #ffd700;
             box-shadow: -5px 0 20px rgba(255, 215, 0, 0.3);
         }
@@ -211,7 +210,7 @@
         }
 
         .league-name {
-            font-weight: 700;
+            font-weight: 600;
             font-size: 1.2rem;
             margin-bottom: 20px;
             text-align: center;
@@ -285,7 +284,7 @@
         h1 {
             text-align: center;
             font-size: 2.5rem;
-            font-weight: 700;
+            font-weight: 600;
             margin: 30px 0;
             background: linear-gradient(45deg, var(--accent-color), var(--primary-color));
             -webkit-background-clip: text;
